--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react_fb_clientpanel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rspadinger.github.io/clientpanel",
   "dependencies": {
     "classnames": "^2.2.6",
     "firebase": "^5.2.0",
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {}
 }
